Takmela/src/generatedparser/ParsetoolsParser.java
// Generated from ParsetoolsParser.g4 by ANTLR 4.5
package generatedparser;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({ "all", "warnings", "unchecked", "unused", "cast" })
public class ParsetoolsParser extends Parser
{
	static
	{
		RuntimeMetaData.checkVersion("4.5", RuntimeMetaData.VERSION);
	}

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache = new PredictionContextCache();
	public static final int KW_WITHIN = 1, KW_PUSHES = 2, KW_POPS = 3, KW_CLASS = 4, KW_SKIP = 5, IDSmall = 6,
			IDCap = 7, LABEL = 8, INT = 9, STRING = 10, COMMA = 11, OPAREN = 12, CPAREN = 13, DOLLAR = 14, PLUS = 15,
			STAR = 16, QUESTION = 17, BAR = 18, COLON = 19, SEMI = 20, COMMENT2 = 21, COMMENT = 22, WS = 23,
			START_CHARCLASS = 24, END_CHARCLASS = 25, CHAR = 26, DASH = 27;
	public static final int RULE_program = 0, RULE_grammar_rule = 1, RULE_seq = 2, RULE_piece = 3, RULE_lexer_rule = 4,
			RULE_within_part = 5, RULE_pushes_part = 6, RULE_pops_part = 7, RULE_rx = 8, RULE_rx_seq = 9,
			RULE_rxpiece = 10, RULE_charClass = 11, RULE_charClassPart = 12, RULE_rangeCh = 13, RULE_singleCh = 14;
	public static final String[] ruleNames = { "program", "grammar_rule", "seq", "piece", "lexer_rule", "within_part",
			"pushes_part", "pops_part", "rx", "rx_seq", "rxpiece", "charClass", "charClassPart", "rangeCh",
			"singleCh" };

	private static final String[] _LITERAL_NAMES = { null, "'within'", "'pushes'", "'pops'", "'class'", "'skip'", null,
			null, null, null, null, "','", "'('", "')'", "'$'", "'+'", "'*'", "'?'", "'|'", "':'", "';'", null, null,
			null, "'['", "']'", null, "'-'" };
	private static final String[] _SYMBOLIC_NAMES = { null, "KW_WITHIN", "KW_PUSHES", "KW_POPS", "KW_CLASS", "KW_SKIP",
			"IDSmall", "IDCap", "LABEL", "INT", "STRING", "COMMA", "OPAREN", "CPAREN", "DOLLAR", "PLUS", "STAR",
			"QUESTION", "BAR", "COLON", "SEMI", "COMMENT2", "COMMENT", "WS", "START_CHARCLASS", "END_CHARCLASS", "CHAR",
			"DASH" };
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static
	{
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++)
		{
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null)
			{
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null)
			{
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override @Deprecated public String[] getTokenNames()
	{
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary()
	{
		return VOCABULARY;
	}

	@Override public String getGrammarFileName()
	{
		return "ParsetoolsParser.g4";
	}

	@Override public String[] getRuleNames()
	{
		return ruleNames;
	}

	@Override public String getSerializedATN()
	{
		return _serializedATN;
	}

	@Override public ATN getATN()
	{
		return _ATN;
	}

	public ParsetoolsParser(TokenStream input)
	{
		super(input);
		_interp = new ParserATNSimulator(this, _ATN, _decisionToDFA, _sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext
	{
		public List<Grammar_ruleContext> grammar_rule()
		{
			return getRuleContexts(Grammar_ruleContext.class);
		}

		public Grammar_ruleContext grammar_rule(int i)
		{
			return getRuleContext(Grammar_ruleContext.class, i);
		}

		public List<Lexer_ruleContext> lexer_rule()
		{
			return getRuleContexts(Lexer_ruleContext.class);
		}

		public Lexer_ruleContext lexer_rule(int i)
		{
			return getRuleContext(Lexer_ruleContext.class, i);
		}

		public ProgramContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override public int getRuleIndex()
		{
			return RULE_program;
		}

		@Override public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).enterProgram(this);
		}

		@Override public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException
	{
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try
		{
			enterOuterAlt(_localctx, 1);
			{
				setState(33);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == IDSmall)
				{
					{
						{
							setState(30);
							grammar_rule();
						}
					}
					setState(35);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(39);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == IDCap)
				{
					{
						{
							setState(36);
							lexer_rule();
						}
					}
					setState(41);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally
		{
			exitRule();
		}
		return _localctx;
	}

	public static class Grammar_ruleContext extends ParserRuleContext
	{
		public TerminalNode IDSmall()
		{
			return getToken(ParsetoolsParser.IDSmall, 0);
		}

		public TerminalNode COLON()
		{
			return getToken(ParsetoolsParser.COLON, 0);
		}

		public List<SeqContext> seq()
		{
			return getRuleContexts(SeqContext.class);
		}

		public SeqContext seq(int i)
		{
			return getRuleContext(SeqContext.class, i);
		}

		public TerminalNode SEMI()
		{
			return getToken(ParsetoolsParser.SEMI, 0);
		}

		public List<TerminalNode> LABEL()
		{
			return getTokens(ParsetoolsParser.LABEL);
		}

		public TerminalNode LABEL(int i)
		{
			return getToken(ParsetoolsParser.LABEL, i);
		}

		public List<TerminalNode> BAR()
		{
			return getTokens(ParsetoolsParser.BAR);
		}

		public TerminalNode BAR(int i)
		{
			return getToken(ParsetoolsParser.BAR, i);
		}

		public Grammar_ruleContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override public int getRuleIndex()
		{
			return RULE_grammar_rule;
		}

		@Override public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).enterGrammar_rule(this);
		}

		@Override public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).exitGrammar_rule(this);
		}
	}

	public final Grammar_ruleContext grammar_rule() throws RecognitionException
	{
		Grammar_ruleContext _localctx = new Grammar_ruleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_grammar_rule);
		int _la;
		try
		{
			enterOuterAlt(_localctx, 1);
			{
				setState(42);
				match(IDSmall);
				setState(43);
				match(COLON);
				setState(44);
				seq();
				setState(46);
				_la = _input.LA(1);
				if (_la == LABEL)
				{
					{
						setState(45);
						match(LABEL);
					}
				}

				setState(55);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la == BAR)
				{
					{
						{
							setState(48);
							match(BAR);
							setState(49);
							seq();
							setState(51);
							_la = _input.LA(1);
							if (_la == LABEL)
							{
								{
									setState(50);
									match(LABEL);
								}
							}

						}
					}
					setState(57);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(58);
				match(SEMI);
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally
		{
			exitRule();
		}
		return _localctx;
	}

	public static class SeqContext extends ParserRuleContext
	{
		public List<PieceContext> piece()
		{
			return getRuleContexts(PieceContext.class);
		}

		public PieceContext piece(int i)
		{
			return getRuleContext(PieceContext.class, i);
		}

		public SeqContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override public int getRuleIndex()
		{
			return RULE_seq;
		}

		@Override public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).enterSeq(this);
		}

		@Override public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).exitSeq(this);
		}
	}

	public final SeqContext seq() throws RecognitionException
	{
		SeqContext _localctx = new SeqContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_seq);
		int _la;
		try
		{
			enterOuterAlt(_localctx, 1);
			{
				setState(63);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0
						&& ((1L << _la) & ((1L << IDSmall) | (1L << IDCap) | (1L << STRING))) != 0))
				{
					{
						{
							setState(60);
							piece();
						}
					}
					setState(65);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally
		{
			exitRule();
		}
		return _localctx;
	}

	public static class PieceContext extends ParserRuleContext
	{
		public PieceContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override public int getRuleIndex()
		{
			return RULE_piece;
		}

		public PieceContext()
		{
		}

		public void copyFrom(PieceContext ctx)
		{
			super.copyFrom(ctx);
		}
	}

	public static class PieceTokenContext extends PieceContext
	{
		public TerminalNode IDCap()
		{
			return getToken(ParsetoolsParser.IDCap, 0);
		}

		public PieceTokenContext(PieceContext ctx)
		{
			copyFrom(ctx);
		}

		@Override public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).enterPieceToken(this);
		}

		@Override public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).exitPieceToken(this);
		}
	}

	public static class PieceTerminalContext extends PieceContext
	{
		public TerminalNode STRING()
		{
			return getToken(ParsetoolsParser.STRING, 0);
		}

		public PieceTerminalContext(PieceContext ctx)
		{
			copyFrom(ctx);
		}

		@Override public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).enterPieceTerminal(this);
		}

		@Override public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).exitPieceTerminal(this);
		}
	}

	public static class PieceCallContext extends PieceContext
	{
		public TerminalNode IDSmall()
		{
			return getToken(ParsetoolsParser.IDSmall, 0);
		}

		public PieceCallContext(PieceContext ctx)
		{
			copyFrom(ctx);
		}

		@Override public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).enterPieceCall(this);
		}

		@Override public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).exitPieceCall(this);
		}
	}

	public final PieceContext piece() throws RecognitionException
	{
		PieceContext _localctx = new PieceContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_piece);
		try
		{
			setState(69);
			switch (_input.LA(1)) {
			case STRING:
				_localctx = new PieceTerminalContext(_localctx);
				enterOuterAlt(_localctx, 1);
			{
				setState(66);
				match(STRING);
			}
				break;
			case IDSmall:
				_localctx = new PieceCallContext(_localctx);
				enterOuterAlt(_localctx, 2);
			{
				setState(67);
				match(IDSmall);
			}
				break;
			case IDCap:
				_localctx = new PieceTokenContext(_localctx);
				enterOuterAlt(_localctx, 3);
			{
				setState(68);
				match(IDCap);
			}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally
		{
			exitRule();
		}
		return _localctx;
	}

	public static class Lexer_ruleContext extends ParserRuleContext
	{
		public List<TerminalNode> IDCap()
		{
			return getTokens(ParsetoolsParser.IDCap);
		}

		public TerminalNode IDCap(int i)
		{
			return getToken(ParsetoolsParser.IDCap, i);
		}

		public Within_partContext within_part()
		{
			return getRuleContext(Within_partContext.class, 0);
		}

		public Pushes_partContext pushes_part()
		{
			return getRuleContext(Pushes_partContext.class, 0);
		}

		public Pops_partContext pops_part()
		{
			return getRuleContext(Pops_partContext.class, 0);
		}

		public TerminalNode COLON()
		{
			return getToken(ParsetoolsParser.COLON, 0);
		}

		public RxContext rx()
		{
			return getRuleContext(RxContext.class, 0);
		}

		public TerminalNode SEMI()
		{
			return getToken(ParsetoolsParser.SEMI, 0);
		}

		public TerminalNode KW_CLASS()
		{
			return getToken(ParsetoolsParser.KW_CLASS, 0);
		}

		public TerminalNode KW_SKIP()
		{
			return getToken(ParsetoolsParser.KW_SKIP, 0);
		}

		public Lexer_ruleContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override public int getRuleIndex()
		{
			return RULE_lexer_rule;
		}

		@Override public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).enterLexer_rule(this);
		}

		@Override public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).exitLexer_rule(this);
		}
	}

	public final Lexer_ruleContext lexer_rule() throws RecognitionException
	{
		Lexer_ruleContext _localctx = new Lexer_ruleContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_lexer_rule);
		int _la;
		try
		{
			enterOuterAlt(_localctx, 1);
			{
				setState(71);
				match(IDCap);
				setState(72);
				within_part();
				setState(73);
				pushes_part();
				setState(74);
				pops_part();
				setState(77);
				_la = _input.LA(1);
				if (_la == KW_CLASS)
				{
					{
						setState(75);
						match(KW_CLASS);
						setState(76);
						match(IDCap);
					}
				}

				setState(80);
				_la = _input.LA(1);
				if (_la == KW_SKIP)
				{
					{
						setState(79);
						match(KW_SKIP);
					}
				}

				setState(82);
				match(COLON);
				setState(83);
				rx(0);
				setState(84);
				match(SEMI);
			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally
		{
			exitRule();
		}
		return _localctx;
	}

	public static class Within_partContext extends ParserRuleContext
	{
		public TerminalNode KW_WITHIN()
		{
			return getToken(ParsetoolsParser.KW_WITHIN, 0);
		}

		public TerminalNode OPAREN()
		{
			return getToken(ParsetoolsParser.OPAREN, 0);
		}

		public List<TerminalNode> IDCap()
		{
			return getTokens(ParsetoolsParser.IDCap);
		}

		public TerminalNode IDCap(int i)
		{
			return getToken(ParsetoolsParser.IDCap, i);
		}

		public TerminalNode CPAREN()
		{
			return getToken(ParsetoolsParser.CPAREN, 0);
		}

		public List<TerminalNode> COMMA()
		{
			return getTokens(ParsetoolsParser.COMMA);
		}

		public TerminalNode COMMA(int i)
		{
			return getToken(ParsetoolsParser.COMMA, i);
		}

		public Within_partContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override public int getRuleIndex()
		{
			return RULE_within_part;
		}

		@Override public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).enterWithin_part(this);
		}

		@Override public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).exitWithin_part(this);
		}
	}

	public final Within_partContext within_part() throws RecognitionException
	{
		Within_partContext _localctx = new Within_partContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_within_part);
		int _la;
		try
		{
			enterOuterAlt(_localctx, 1);
			{
				setState(97);
				_la = _input.LA(1);
				if (_la == KW_WITHIN)
				{
					{
						setState(86);
						match(KW_WITHIN);
						setState(87);
						match(OPAREN);
						setState(88);
						match(IDCap);
						setState(93);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la == COMMA)
						{
							{
								{
									setState(89);
									match(COMMA);
									setState(90);
									match(IDCap);
								}
							}
							setState(95);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(96);
						match(CPAREN);
					}
				}

			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally
		{
			exitRule();
		}
		return _localctx;
	}

	public static class Pushes_partContext extends ParserRuleContext
	{
		public TerminalNode KW_PUSHES()
		{
			return getToken(ParsetoolsParser.KW_PUSHES, 0);
		}

		public TerminalNode OPAREN()
		{
			return getToken(ParsetoolsParser.OPAREN, 0);
		}

		public List<TerminalNode> IDCap()
		{
			return getTokens(ParsetoolsParser.IDCap);
		}

		public TerminalNode IDCap(int i)
		{
			return getToken(ParsetoolsParser.IDCap, i);
		}

		public TerminalNode CPAREN()
		{
			return getToken(ParsetoolsParser.CPAREN, 0);
		}

		public List<TerminalNode> COMMA()
		{
			return getTokens(ParsetoolsParser.COMMA);
		}

		public TerminalNode COMMA(int i)
		{
			return getToken(ParsetoolsParser.COMMA, i);
		}

		public Pushes_partContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override public int getRuleIndex()
		{
			return RULE_pushes_part;
		}

		@Override public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).enterPushes_part(this);
		}

		@Override public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).exitPushes_part(this);
		}
	}

	public final Pushes_partContext pushes_part() throws RecognitionException
	{
		Pushes_partContext _localctx = new Pushes_partContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_pushes_part);
		int _la;
		try
		{
			enterOuterAlt(_localctx, 1);
			{
				setState(110);
				_la = _input.LA(1);
				if (_la == KW_PUSHES)
				{
					{
						setState(99);
						match(KW_PUSHES);
						setState(100);
						match(OPAREN);
						setState(101);
						match(IDCap);
						setState(106);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la == COMMA)
						{
							{
								{
									setState(102);
									match(COMMA);
									setState(103);
									match(IDCap);
								}
							}
							setState(108);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(109);
						match(CPAREN);
					}
				}

			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally
		{
			exitRule();
		}
		return _localctx;
	}

	public static class Pops_partContext extends ParserRuleContext
	{
		public TerminalNode KW_POPS()
		{
			return getToken(ParsetoolsParser.KW_POPS, 0);
		}

		public TerminalNode OPAREN()
		{
			return getToken(ParsetoolsParser.OPAREN, 0);
		}

		public List<TerminalNode> IDCap()
		{
			return getTokens(ParsetoolsParser.IDCap);
		}

		public TerminalNode IDCap(int i)
		{
			return getToken(ParsetoolsParser.IDCap, i);
		}

		public TerminalNode CPAREN()
		{
			return getToken(ParsetoolsParser.CPAREN, 0);
		}

		public List<TerminalNode> COMMA()
		{
			return getTokens(ParsetoolsParser.COMMA);
		}

		public TerminalNode COMMA(int i)
		{
			return getToken(ParsetoolsParser.COMMA, i);
		}

		public Pops_partContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override public int getRuleIndex()
		{
			return RULE_pops_part;
		}

		@Override public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).enterPops_part(this);
		}

		@Override public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).exitPops_part(this);
		}
	}

	public final Pops_partContext pops_part() throws RecognitionException
	{
		Pops_partContext _localctx = new Pops_partContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_pops_part);
		int _la;
		try
		{
			enterOuterAlt(_localctx, 1);
			{
				setState(123);
				_la = _input.LA(1);
				if (_la == KW_POPS)
				{
					{
						setState(112);
						match(KW_POPS);
						setState(113);
						match(OPAREN);
						setState(114);
						match(IDCap);
						setState(119);
						_errHandler.sync(this);
						_la = _input.LA(1);
						while (_la == COMMA)
						{
							{
								{
									setState(115);
									match(COMMA);
									setState(116);
									match(IDCap);
								}
							}
							setState(121);
							_errHandler.sync(this);
							_la = _input.LA(1);
						}
						setState(122);
						match(CPAREN);
					}
				}

			}
		}
		catch (RecognitionException re)
		{
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally
		{
			exitRule();
		}
		return _localctx;
	}

	public static class RxContext extends ParserRuleContext
	{
		public RxContext(ParserRuleContext parent, int invokingState)
		{
			super(parent, invokingState);
		}

		@Override public int getRuleIndex()
		{
			return RULE_rx;
		}

		public RxContext()
		{
		}

		public void copyFrom(RxContext ctx)
		{
			super.copyFrom(ctx);
		}
	}

	public static class OringContext extends RxContext
	{
		public RxContext rx()
		{
			return getRuleContext(RxContext.class, 0);
		}

		public TerminalNode BAR()
		{
			return getToken(ParsetoolsParser.BAR, 0);
		}

		public Rx_seqContext rx_seq()
		{
			return getRuleContext(Rx_seqContext.class, 0);
		}

		public OringContext(RxContext ctx)
		{
			copyFrom(ctx);
		}

		@Override public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).enterOring(this);
		}

		@Override public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).exitOring(this);
		}
	}

	public static class JustSeqContext extends RxContext
	{
		public Rx_seqContext rx_seq()
		{
			return getRuleContext(Rx_seqContext.class, 0);
		}

		public JustSeqContext(RxContext ctx)
		{
			copyFrom(ctx);
		}

		@Override public void enterRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).enterJustSeq(this);
		}

		@Override public void exitRule(ParseTreeListener listener)
		{
			if (listener instanceof ParsetoolsParserListener)
				((ParsetoolsParserListener) listener).exitJustSeq(this);
		}
	}

	public final RxContext rx() throws RecognitionException
	{
		return rx(0);
	}

	private RxContext rx(int _p) throws RecognitionException
	{
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		RxContext _localctx = new RxContext(_ctx, _parentState);
		RxContext _prevctx = _localctx;
		int _startState = 16;
		enterRecursionRule(_localctx, 16, RULE_rx, _p);
		try
		{
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
				{
					_localctx = new JustSeqContext(_localctx);
					_ctx = _localctx;
					_prevctx = _localctx;
